--- a/expirationDateManager/index.html
+++ b/expirationDateManager/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>賞味期限管理</title>
 <style>
     body{
         margin: 0;
