--- a/expirationDateManager/index.html
+++ b/expirationDateManager/index.html
@@ -12,8 +12,8 @@
         position: fixed;
         top: 0;
         bottom: 0;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         border:0;
     }
 </style>
