--- a/expirationDateManager/index.html
+++ b/expirationDateManager/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>賞味期限管理</title>
@@ -21,3 +22,4 @@
 <body>
     <iframe src="https://script.google.com/macros/s/AKfycbyNfIJiocEk3nXxTa7vrNsmJHTHlF7BM7hpig10hZqpmbiWvYI/exec"></iframe>
 </body>
+</html>
