--- a/expirationDateManager/index.html
+++ b/expirationDateManager/index.html
@@ -20,6 +20,6 @@
 </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbyNfIJiocEk3nXxTa7vrNsmJHTHlF7BM7hpig10hZqpmbiWvYI/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbyNfIJiocEk3nXxTa7vrNsmJHTHlF7BM7hpig10hZqpmbiWvYI/exec" allowusermedia=true></iframe>
 </body>
 </html>
