--- a/retranser/index.html
+++ b/retranser/index.html
@@ -133,7 +133,6 @@
     
     // 音声認識
     var recognition = new webkitSpeechRecognition();
-    recognition.lanh = "ja"; //初期の認識言語
     recognition.onresult = function(event){
       if(event.results.length > 0){
         document.getElementById("input").value = event.results[0][0].transcript;
@@ -158,6 +157,7 @@
   
     function micRecStart(){
       recognition.start();
+      recognition.lang = document.getElementById("fromLang").value;
       document.getElementById("recButton").value ="マイク入力許可してください";
     }
     
