--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         margin-top: 0.5em;
         background-color:#999; 
         color:#fff;
-        height:2em;
+        min-height:2em;
         padding: 0;
     }
     
@@ -159,6 +159,6 @@
  
 </section>
 <footer>
-    COPYRIGHT © あいてにあむ 2019 ALL RIGHTS RESERVED.	
+    COPYRIGHT &#169; あいてにあむ 2019 ALL RIGHTS RESERVED.	
 </footer>
 </body>
