update: portfolio add: title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"> 
+    <title>あいてにあむ's portfolio</title>
     <style type="text/css">
     @import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
     body{
