--- a/retranser/index.html
+++ b/retranser/index.html
@@ -210,6 +210,7 @@
     // 閉じるボタン
     function closeWindow(){
       window.open('','_self').close();
+      window.close();
       setTimeout("alertCannotClose()",500)
     }
     function alertCannotClose(){
