--- a/retranser/index.html
+++ b/retranser/index.html
@@ -29,6 +29,7 @@
       <option value="en"         >英</option>
       <option value="ja" selected>日</option>
       <option value="zh"         >中</option>
+      <option value="ko"         >韓</option>
     </select>
     <input type="button" id="recButton" value="音声入力" onclick="micRecStart()">
     <input type="button" onclick="execTrans();" value="翻訳">
@@ -39,6 +40,7 @@
       <option value="en" selected>英</option>
       <option value="ja"         >日</option>
       <option value="zh"         >中</option>
+      <option value="ko"         >韓</option>
     </select>
     <input type="button" onclick="swapLang(true);" value="▲▼">
     <input type="button" id="repRecButton" value="返答音声入力" onclick="replyMicRecStart()">
