--- a/retranser/index.html
+++ b/retranser/index.html
@@ -4,15 +4,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>再翻やくん</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style type="text/css">
   </style>
-  
   <script src="main.js"></script>
-  <script type="text/javascript"><!--
-  --></script>
   </head>
   <body>
   <header class="header">
@@ -43,13 +40,14 @@
       <option value="ko"         >韓</option>
     </select>
     <input type="button" onclick="swapLang(true);" value="▲▼">
+    <input type="button" onclick="speak();" value="TTS">
     <input type="button" id="repRecButton" value="返答音声入力" onclick="replyMicRecStart()">
     <textarea id="translated"   readonly>Hello.</textarea>
     
     <h2>再翻訳結果</h2>
     <textarea id="retranslated" readonly>こんにちは．</textarea>
   </section>
-  
+
   <script type="text/javascript"><!-- // Chrome,safariなら表示 //todo:safariの対応状況確認
     let userAgent;
     console.log(userAgent = window.navigator.userAgent);
