fix: sectionボタントグル化

--- a/retranser/index.html
+++ b/retranser/index.html
@@ -17,8 +17,10 @@
     <h1 class="headerL">再翻やくん</h1>
     <input class="headerR" type="button" value="閉じる"
            onclick="closeWindow()">
-    <input class="headerR" type="button" value="favorite"
+    <input class="headerR" type="button" value="favorite" id="tofavorite"
           onclick="switchSection('favorite')">
+    <input class="headerR" type="button" value="TOP" id="tomain"
+          onclick="switchSection('main')">
   </section>
   </header>
   <section id="main">
