--- a/retranser/start.html
+++ b/retranser/start.html
@@ -31,7 +31,8 @@
   </header>
   <section class="startsec">
     <div style="height:4em;">　</div>
-    <input type="button" class="open" onclick="window.open('index.html','_blank','toolbar=no,location=no,menubar=no,status=no');" value="開く">
+    <input type="button" class="open" 
+    onclick="window.open('index.html?showsCloseB=true','_blank','toolbar=no,location=no,menubar=no,status=no');" value="開く">
     
   </section>
   
