--- a/retranser/index.html
+++ b/retranser/index.html
@@ -40,7 +40,7 @@
                     vm.addFavorite(langVal,inp.value);
                     inp.value='';">
     <textarea id="input" oninput="autoTrans()" onblur="execTrans()" 
-    onkeydown="transByEnter()">こんにちは．</textarea>
+    onkeydown="transByEnter()"></textarea>
     <h2>翻訳結果</h2>
     <select id="toLang" onchange="execTrans()">
       <option value="en" selected>英</option>
@@ -51,7 +51,7 @@
     <input type="button" onclick="swapLang(true);" value="▲">
     <input type="button" onclick="speak();" value="読">
     <input type="button" id="repRecButton" value="返答音声入力" onclick="replyMicRecStart()">
-    <textarea id="translated"   readonly>Hello.</textarea>
+    <textarea id="translated"   readonly></textarea>
     
     <h2>再翻訳結果</h2>
     <input type="button" onclick="tweet();" value="Tweet">
