--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         width:20em;
         max-width: 85vw;
         height:16em;
-        margin:  0.5em 0 0 0.5em;
+        margin:  0.5em 0.25em 0 0.25em;
         vertical-align: middle;
     }
     div.wrap2{
@@ -50,7 +50,7 @@
         width:20em;
         max-width: 85vw;
         height:32.5em;
-        margin:  0.5em 0 0.5em 0.5em;
+        margin:  0.5em 0.25em 0 0.25em;
     }
     .cover{
         background-color:#AAA; 
