fix: vueを本番版に差替・バージョン固定

--- a/retranser/index.html
+++ b/retranser/index.html
@@ -70,7 +70,8 @@
     </ul>     
   </section>
   
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>//開発版-->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
   <script src="favoCtrler.js"></script>
   <script src="tweet.js"></script>
   <script type="text/javascript"><!-- // 音声認識可能なら表示
