fix: css 200px=100vwの端末での表示改善

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     div{
         margin: 0;
         padding: 0;
+        overflow: hidden;
     }
     div.wrap{
         background-color:#EEE; 
@@ -107,6 +108,7 @@
             width:20.5em;
             display: flex;
             flex-direction: column;
+            align-items: center;
 	    }
     }
     --></style>
@@ -135,7 +137,7 @@
       <h2>たまに書く</h2>
       C / Java / VBA
 
-      <span class="cover">skill</span>
+      <span class="cover">skills</span>
     </div>
     <div class="wrap">
       <h2>画像処理</h2>
