--- a/index.html
+++ b/index.html
@@ -96,19 +96,22 @@
         min-height:2em;
         padding: 0;
     }
-    
-    @media screen and (max-width: 63.5em) {
-	    .lastWrap {
-            width:41em;
-            display: flex;
+    @media screen and (min-width: 70em) {
+	    body{
+        font-size: 1.2vw;
 	    }
     }
-    @media screen and (max-width: 42em) {
+    @media screen and (max-width: 63.5em) {
 	    .lastWrap {
-            width:20.5em;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        width:41em;
+        display: flex;
+	    }
+    }
+    @media screen and (max-width: 40.5em) {
+	    .lastWrap {
+        width:20.5em;
+        flex-direction: column;
+        align-items: center;
 	    }
     }
     --></style>
