--- a/memorandum/1908RFS/index.html
+++ b/memorandum/1908RFS/index.html
@@ -58,6 +58,8 @@
         width: 100%;
         height: 100%;
         border:0;
+        -webkit-overflow-scrolling: touch;
+        overflow: auto;
     }
 --></style>
 </head>
