--- a/memorandum/1908RFS/index.html
+++ b/memorandum/1908RFS/index.html
@@ -58,13 +58,15 @@
         width: 100%;
         height: 100%;
         border:0;
+    }
+    .iframeWrapper{
         -webkit-overflow-scrolling: touch;
         overflow: auto;
     }
 --></style>
 </head>
 <body>
-    <iframe name="_mainFrame" id="_mainFrame"></iframe>
+    <div class="iframeWrapper"><iframe name="_mainFrame" id="_mainFrame"></iframe></div>
     <section id="loaderSec" style="display:flex;">
         <div id="loader">    
           <img src="./logo-w.png" >
