--- a/memorandum/1908RFS/index.html
+++ b/memorandum/1908RFS/index.html
@@ -47,21 +47,23 @@
 --></script>
 <style type="text/css"><!--
     body{
-        margin: 0;
-        padding: 0;
-
+        margin:    0;
+        padding:   0;
+        width:  100%;
+        height: 100%;
     }
     iframe{
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        border:0;
+        width:   100%;
+        height:  100%;
+        border:  none; 
+        display: block; 
     }
     .iframeWrapper{
+        width:    100%;
+        height:   100%;
+        overflow: auto; 
         -webkit-overflow-scrolling: touch;
-        overflow: auto;
+        border:   none;
     }
 --></style>
 </head>
