--- a/memorandum/1908RFS/index.html
+++ b/memorandum/1908RFS/index.html
@@ -50,7 +50,7 @@
         margin:    0;
         padding:   0;
         width:  100%;
-        height: 100%;
+        height: 100vh;
     }
     iframe{
         width:   100%;
