--- a/memorandum/1908RFS/index.html
+++ b/memorandum/1908RFS/index.html
@@ -51,6 +51,7 @@
         padding:   0;
         width:  100%;
         height: 100vh;
+        overflow-x: hidden;
     }
     iframe{
         width:   100%;
@@ -59,11 +60,12 @@
         display: block; 
     }
     .iframeWrapper{
-        width:    100%;
-        height:   100%;
-        overflow: auto; 
+        width:  100%;
+        height: 100%;
+        overflow-y: auto; 
+        overflow-x: hidden; 
         -webkit-overflow-scrolling: touch;
-        border:   none;
+        border: none;
     }
 --></style>
 </head>
