--- a/memorandum/1908RFS/forIosScroll.html
+++ b/memorandum/1908RFS/forIosScroll.html
@@ -54,16 +54,21 @@
         overflow-x: hidden;
     }
     iframe{
-        width:   100%;
-        height:  100%;
-        border:  none; 
-        display: block; 
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        border:none;
+        display:block;
     }
     .iframeWrapper{
         width:  100%;
         height: 100%;
-        overflow-y: auto; 
-        overflow-x: hidden; 
+        overflow-y: auto;
+        overflow-x: hidden;
+        position: relative;
+        width: 100%;
         -webkit-overflow-scrolling: touch;
         border: none;
     }
