--- a/memorandum/1908RFS/forIosScroll.html
+++ b/memorandum/1908RFS/forIosScroll.html
@@ -51,22 +51,19 @@
         padding:   0;
         width:  100%;
         height: 100vh;
-        overflow-x: hidden;
+        overflow: auto;
     }
     iframe{
-        position:absolute;
-        top:0;
-        left:0;
         width:100%;
         height:100%;
         border:none;
         display:block;
+        overflow: auto;
     }
     .iframeWrapper{
         width:  100%;
         height: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow: auto;
         position: relative;
         width: 100%;
         -webkit-overflow-scrolling: touch;
