--- a/memorandum/1908RFS/forIosScroll3.html
+++ b/memorandum/1908RFS/forIosScroll3.html
@@ -51,18 +51,20 @@
         padding:   0;
         width:  100%;
         height: 100vh;
+        overflow: auto;
     }
     iframe{
         width:100%;
         height:100%;
         border:none;
         display:block;
+        overflow: auto;
     }
     .iframeWrapper{
         width:  100%;
         height: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;-webkit-overflow-scrolling: touch;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
         border: none;
     }
 --></style>
