--- a/memorandum/1908RFS/loader.html
+++ b/memorandum/1908RFS/loader.html
@@ -15,7 +15,9 @@
       text-align: center;
       align-items: center;
       flex-direction: column;
-      margin: auto;
+      margin: auto !important;
+      height: auto !important;
+      width:  auto !important;
     }
       
     .loaderInner {
