--- a/memorandum/1910wsapi-uttr.html
+++ b/memorandum/1910wsapi-uttr.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <textarea id="text">センテンス</textarea>
-  <button onclick="uttr();">uttr</button>
+  <button id="uttrBtn" onclick="uttr();">uttr</button>
   
   <script type="text/javascript">
     function uttr(){
