--- a/memorandum/always-display.html
+++ b/memorandum/always-display.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script>
+    window.onload = function(){
+      setTimeout(function(){
+        window.open(location.href, "_top")
+      },3600000);
+    };
+  </script>
 <title>always</title>
 <style>
-    body{
-        margin: 0;
-        padding: 0;
-
-    }
-    iframe{
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        border:0;
-    }
+  body{
+    margin:  0;
+    padding: 0;
+  }
+  iframe{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border:0;
+  }
 </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec" allowusermedia="true"></iframe>
+  <iframe src="https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec" allowusermedia="true"></iframe>
 </body>
 </html>
