--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -27,6 +27,6 @@
 </style>
 </head>
 <body>
-  <iframe src="https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec?area=334" allowusermedia="true"></iframe>
+  <iframe src="https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec?mode=rits" allowusermedia="true"></iframe>
 </body>
 </html>
