fix: tickerの文字サイズ・縦幅css修正

--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -82,21 +82,22 @@
           position: fixed;
           bottom: 2.5vh;
           left: 5vw;
-          height: 10vh;
+          height: 5.6vw;
           width:91vw;
           border: none;
           overflow: hidden;
         }
         .tickerOnepoint{
           position: fixed;
+          padding: 0.1vw;
           bottom: 2.5vh;
           left: 4.5vw;
-          height: 16vh;
+          height: 9vw;
           width: 20vw;
           border: none;
           overflow: hidden;
           background-color: rgb(32, 64, 170);
-          font-size:   2em;
+          font-size:  2.5vw;
           font-weight: 900;
           text-align: center;
           color: #fff;
